# stealthsend-desktop

./: .env  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc  101.md  LICENSE  README.md  favicon.icns  index.html  jsconfig.json  macos_keychain_actions  package-lock.json  package.json  postcss.config.js  sonar-project.properties  stealthsend-developerID_application.cer  test-feeless.js  vite.config.js  vue.config.js
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md  config.yml
.husky/: pre-commit
.semgrep/electron/: security_electron.js  security_electronjs.yaml
.semgrep/js-frontend/: useless-eqeq.js
bitcoinjs-lib-feeless/src/: block.js  bufferutils.js  crypto.js  ecpair.js  psbt.js  script.js  script_signature.js  transaction.js  transaction_builder.js
public/: index.html  preload.js
scripts/: notarize.js
src/: .eslintrc.js  App.vue  background.js  db.js  index.css  main.js
src/api/: axios.js
src/assets/: icon.icns
src/composables/: useCoinControl.js  useFeeEstimator.js  useHelpers.js  useTransactionBuilder.js  useTransactionBuilderForImportedAccount.js
src/css/: _shame.css  shame.css
src/directives/: index.js
src/helpers/: create-window.js
src/pages/: dashboard.vue  settings.vue  uikit.vue
src/router/: index.js
src/services/: bodymovin.js  createFeeworkAndFeelessScriptPubkey.js  crypto.js  emitter.js  feeless.js  math.js  wallet.js
src/store/: global.js  index.js
stealth-feeless-rust-wasm/: Cargo.toml
stealth-feeless-rust-wasm/src/: lib.rs
(+154 files in other folders)
