[package]
name = "stealth-feeless-rust-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "*"
bytebuffer = "*"
byteorder = "*"
rust-argon2 = "*"
argonautica = "*"
futures-cpupool = "*"
uint = "*"
hex = "*"
xorshift = "*"
web-sys = { version = "0.3.52", features = ["console"] }
chrono = { version = "*", default-features = true, features = ["wasmbind", "js-sys", "time"] }

[lib]
crate-type = ["cdylib"]